fix: harden config persistence